2004-11-16 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/source_config: Added install_log.conf, logdir
	  & prometheus.conf.

	* testsuite/libprometheus/STATUS: Added.

2004-11-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/pkginfo.1.in: Written.

2004-10-22 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginfo.in: Written.

2004-10-20 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in: Added quotes around echoed variables in
	  logged_failure, source_file, source_config, source_profile, set_stage,
	  unpack, cat_file & location_of.
	* testsuite/libprometheus/log/tnlycf_stderr.txt: Error message updated.
	* testsuite/libprometheus/source_file: Error message updated in
	  invalid_error & none_error.

	* scripts/compact.in: Added quotes around echoed variables.
	* scripts/pkgadd.in: Added quotes around echoed variables.
	* scripts/pkgbuild.in: Added quotes around echoed variables.
	* scripts/pkgcheck.in: Added quotes around echoed variables.
	* scripts/pkgget.in: Added quotes around echoed variables.
	* scripts/pkginstall.in: Added quotes around echoed variables.
	* scripts/pkunpack.in: Added quotes around echoed variables.

2004-09-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/*, scripts/*: Changed the short option equivalent of
	  --version to '-V' instead of '-v'.

2004-09-23 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/echo_array/echo_array: Added.

	* testsuite/libprometheus/source_file: Added valid.txt, invalid.txt,
	  valid_status, valid_sourced, invalid_status, invalid_error,
	  none_status & none_error.

2004-09-19 Gareth Jones <gareth_jones@users.berlios.de>

	* testsuite/libprometheus/get_installed_version: Added vtab &
	  get_installed_version.

	* testsuite/libprometheus/choice: Added yes & no.

	* testsuite/runtest.in: Added `shopt -u sourcepath'.
	* scripts/libprometheus.bash.in: Added `shopt -u sourcepath'.
